--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,15 @@ http {
            proxy_pass http://localhost:3031/pad/;
         }
 
+        location /pad-socket {
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_http_version 1.1;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_pass http://localhost:3031/pad-socket/;
+        }
+
         location /files/ {
            proxy_pass http://localhost:3030/files/;
         }
@@ -99,6 +108,15 @@ http {
 
         location /pad/ {
            proxy_pass http://localhost:3031/pad/;
+        }
+
+        location /pad-socket {
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_http_version 1.1;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_pass http://localhost:3031/pad-socket/;
         }
 
         location /files/ {
