--- a/nginx.conf
+++ b/nginx.conf
@@ -47,6 +47,10 @@ http {
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
+        location /wopi/ {
+           proxy_pass http://localhost:8088/wopi/;
+        }
+
         location /jenkins/ {
            proxy_pass http://localhost:8080;
         }
@@ -101,6 +105,10 @@ http {
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
+
+        location /wopi/ {
+           proxy_pass http://localhost:8088/wopi/;
+        }
 
         location /jenkins/ {
            proxy_pass http://localhost:8080;
